# OSMSG-stats

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  app.py  oauth_cookie_client.py  package-lock.json  pyproject.toml  requirements.txt  sample.yml  setup.py  stats.csv  stats.txt  stats_metadata.txt  streamlit_app.py  tweet.py  tweet_test.py
.github/workflows/: build.yml  build_and_publish_docker.yml  daily_Nepal.yml  daily_elinino2023.yml  daily_field_mappers.yml  daily_global.yml  daily_hotosm.yml  daily_kakuma_project.yml  daily_mapherworld.yml  daily_ogasiapacific.yml  daily_omhesa.yml  daily_report.yml  daily_slsibhutan.yml  daily_smforst.yml  daily_turkey_eq.yml  daily_watersurfacemapping.yml  every_two_days_snrmpnepal.yml  monthly_global.yml  monthly_hotosm.yml  monthly_nepal.yml  nextjs.yml  test_app.yml  test_tweet.yml  weekly_Nepal.yml  weekly_field_mappers.yml  weekly_fmtm.yml  weekly_global.yml  weekly_hotosm.yml  weekly_report.yml
data/: Readme.md  countries.csv  countries.geojson  example_boundary.geojson
docs/: Install_windows.md  Installation.md  Manual.md  Request_Stats.md  Version_control.md
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/public/: stats_summary.csv
frontend/src/app/: page.tsx
frontend/src/components/: CsvSelector.tsx
osg/: app.py
osmsg/: app.py  changefiles.py  changesets.py  login.py  utils.py
stats/: Readme.md
stats/Global/: README.md
stats/Global/Daily/: README.md  Readme.md  stats.csv  (+3 more)
stats/Nepal/: Readme.md
stats/hotosm/: Readme.md
(+86 files in other folders)
