[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osmsg"
version = "0.2.2"
description = "OpenStreetMap Stats Generator : Commandline"
readme = "README.md"
authors = [{name = "Kshitij Raj Sharma", email = "skshitizraj@gmail.com"}]
license = {text = "MIT"}

[project.scripts]
osmsg = "osmsg.app:main"

[tool.poetry.dependencies]
python = "^3.6"
osmium = "*"
pandas = "==1.5.2"
requests = "*"
shapely = "*"
geopandas = "==0.10.2"
tqdm = "*"
seaborn = "*"
matplotlib = "*"
humanize = "*"

[tool.poetry.scripts]
osmsg = "osmsg.app:main"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
